--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,9 +3,9 @@ KERNEL INSTALLER BY Alexia Michelle
 
 2025-11-20:
 
-- Added progressbar (Experimental) to aid the user in comprehending
-  how long is left until compilation ends.
-
-- Added fedora support (experimental)
-
+- Refatored detect_distro to be more modular and easier to scale.
+- Improved interface vía ncurses.
+- Added support for fedora. (experimental)
+- Added **progressbar** to let people know how long is left until compilation ends.
+- Italian translation (experimental)
 - Added a changelog (this one, heh)
